# wc-tool

./: README.md  pyproject.toml  setup.py
ccwc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: test.txt
src/: ccwc.py  main.py  utils.py
src/ccwc.egg-info/: SOURCES.txt  entry_points.txt
src/ccwc_fraxhost/: ccwc.py  main.py  utils.py
tests/: test_utlis.py
